* Add property to enable/disable use of OSHI native library for metrics (internal.monitor.enableOperatingSystemInfo)
* Only get and update the process once when polling OSHI native library
* Remove system metrics that called getAllStackTraces(): com.serotonin.m2m2.rt.maint.WorkItemMonitor.maxStackHeight and com.serotonin.m2m2.rt.maint.WorkItemMonitor.threadCount

*4.1.2*
* Fix bug in data point notify events to more accurately fire the correct event types that control meta points and event detectors

*Mango 4.1.1*
* Fix for deserializing chart renderers in legacy data point blob columns

*Mango 4.1.0*
* Filter roles so users can only see their own roles
* Users can only add/remove their own roles from permissions
* Only superadmin users can add/remove user or anonymous role from permissions

*Mango 4.0.0*
* Completely remove legacy UI
* Remove REST v1 api
* Add new role table and roles to replace legacy permission strings, the upgrade will convert all permission strings into unique roles and ensure that the permissions remain the same
* Remove data point chart renderers as they are not used in the new UI
* Remove support for RQL keywords permissionscontainsany and permissionscontainsall
* Properties from env.properties can now be overridden using a Java system property
* Properties from env.properties are no longer reloadable, they are only loaded once on system startup
* Any property value retrieved from env.properties can now include another property value using ${propertyName} syntax
* Make log directory, temporary (work) directory, and file data (image point values) directory configurable via env.properties
* Use configurable logs directory for DB upgrade logs
* Module zip files are now downloaded to the configurable temp directory when upgrading
* Remove userEvents table which would allow a user to silence an event for yourself in the legacy UI
* Fix bug in MySQL database create script which would create the name column 40 characters long instead of 255